--- a/DOM/01_initialdom.html
+++ b/DOM/01_initialdom.html
@@ -16,9 +16,22 @@
     <div1 class="blackitis">hi I am sam</div1>
     <p class="initial">dom learn</p>
     <h1 id="first head" class="heading"> lets be the best sam<span Style="display:none;"> hi i am chupa hua</span></h1>
-    <h2>be the first one in here</h2>
-    <h2>lets go to be more precise</h2>
+    <!-- <h2>be the first one in here</h2> -->
+    <h2 id="rad" class="h2 class">lets go to be more precise</h2>
     <h4>hard to do but commited enough</h4>
+    <input type="password" name="" id="">
+    <ul>
+        <li>one here</li>
+        <li>two</li>
+        <li>three</li>
+    </ul>
+        
+    <ul>
+        <li class="list">one</li>
+        <li class="list">two</li>
+        <li class="list">three</li>
+        <li class="list">four</li>
+    </ul>
     <script href="01_dom.js"></script>
     </div>
 </body>
