js project development

--- a/JS project(Basic)/index.html
+++ b/JS project(Basic)/index.html
@@ -18,11 +18,20 @@
         
     </header>
     <div class="space"></div>
+
     <div class="projects">
-    <div class="clrchanger"><a href="color changer/index1.html" class="full"></a>colour changer</div>
-    <div class="bmi">Body Mass Index</div>
-    <div class="clock">clock</div>
-    <div class="guessnumber">234</div>
+    <div class="clrchanger">
+        <a href="01_color changer/index1.html" class="full"></a>colour changer
+    </div>
+    <div class="bmi">
+        <a href="02_BMI calculator/index2.html" class="full"></a>Body mass index
+    </div>
+    <div class="clock">
+        <a href="03_clock/index.html" class="full"></a>clock
+    </div>
+    <div class="guessnumber">
+        <a href="yellow" class="full" ></a>hello
+    </div>
     </div>
     <footer>
         <p class="last"> initial Project by SAM</p>
