--- a/JS project(Basic)/index.html
+++ b/JS project(Basic)/index.html
@@ -30,7 +30,7 @@
         <a href="03_clock/index.html" class="full"></a>clock
     </div>
     <div class="guessnumber">
-        <a href="yellow" class="full" ></a>hello
+        <a href="04_guessnumber/index.html" class="full" ></a>guess number
     </div>
     </div>
     <footer>
