made the 4th project by own

--- a/JS project(Basic)/04_guessnumber/index.html
+++ b/JS project(Basic)/04_guessnumber/index.html
@@ -22,7 +22,7 @@
         <p class="first"> Number guessing game</p>
         <div class="smallbox">
             <form class="form">
-            <p class="text" id="test">Try and guess a random number between 1 and 100</p>
+            <p class="text" id="test">Try and guess a random number between 1 and 10</p>
             <p class="text">you have 10 attempts to guess the right number</p>
             <P class="heading">Guess a Number</P>
             </form>
@@ -30,7 +30,7 @@
             <input class="read" type="text" placeholder="enter your guess">
             <button class="submit">submit guess</button>
             <p class="preguess" id="last">Previous Guess:</p>
-            <p class="guessr" id="last"> guess remianing: 10</p>
+            <p class="guessno" id="last"> guess remianing:10</p>
             </div>
         </div>
     </div>
