--- a/JS project(Basic)/index.html
+++ b/JS project(Basic)/index.html
@@ -21,7 +21,7 @@
 
     <div class="projects">
     <div class="clrchanger">
-        <a href="01_color changer/index1.html" class="full"></a>colour changer
+        <a href="01_color changer/index1.html" class="full"></a>Colour changer
     </div>
     <div class="bmi">
         <a href="02_BMI calculator/index2.html" class="full"></a>Body mass index
@@ -30,7 +30,10 @@
         <a href="03_clock/index.html" class="full"></a>clock
     </div>
     <div class="guessnumber">
-        <a href="04_guessnumber/index.html" class="full" ></a>guess number
+        <a href="04_guessnumber/index.html" class="full" ></a>Guess number
+    </div>
+    <div class="conticlr">
+        <a href="05_conti color changer/index.html" class="full"></a>Auto Colour 
     </div>
     </div>
     <footer>
