--- a/10_Api and System/02testingme.html
+++ b/10_Api and System/02testingme.html
@@ -35,6 +35,14 @@
                 }
             }
             boxy.send();
+            // try 2
+            
+            // const nava=new XMLHttpRequest();
+            // nava.open("GET","https://api.github.com/users/sam");
+            // nava.onreadystatechange=function(){
+            //     console.log(nava.readyState);
+            // }
+            // nava.send();
         })
         
     </script>
