--- a/12_PROJECT_task_bar/index.html
+++ b/12_PROJECT_task_bar/index.html
@@ -1,104 +1,5 @@
+
 <!DOCTYPE html>
-<html>
-<head>
-    <title>Sam's HTML Practice Table</title>
-    <style>
-        /* Simple CSS just to make the table readable */
-        table {
-            border-collapse: collapse;
-            width: 100%;
-        }
-        th, td {
-            border: 1px solid black;
-            padding: 10px;
-            text-align: left;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-    </style>
-</head>
-<body>
-
-    <h2>HTML Functionality Demo Table</h2>
-
-    <table>
-        <thead>
-            <tr>
-                <th>Functionality</th>
-                <th>HTML Tag Used</th>
-                <th>Live Example (Result)</th>
-            </tr>
-        </thead>
-
-        <tbody>
-            <tr>
-                <td><strong>Bold Text</strong></td>
-                <td><code>&lt;b&gt;</code> or <code>&lt;strong&gt;</code></td>
-                <td>This is <b>Bold</b> and this is <strong>Strong</strong></td>
-            </tr>
-
-            <tr>
-                <td><em>Italic/Emphasis</em></td>
-                <td><code>&lt;i&gt;</code> or <code>&lt;em&gt;</code></td>
-                <td>This is <i>Italic</i> and this is <em>Emphasized</em></td>
-            </tr>
-
-            <tr>
-                <td>Hyperlink</td>
-                <td><code>&lt;a href="..."&gt;</code></td>
-                <td><a href="https://www.google.com" target="_blank">Click here to go to Google</a></td>
-            </tr>
-
-            <tr>
-                <td>Unordered List</td>
-                <td><code>&lt;ul&gt;</code> and <code>&lt;li&gt;</code></td>
-                <td>
-                    Your Tech Stack:
-                    <ul>
-                        <li>Java (DSA)</li>
-                        <li>React (Projects)</li>
-                        <li>HTML/CSS</li>
-                    </ul>
-                </td>
-            </tr>
-
-            <tr>
-                <td>Line Break</td>
-                <td><code>&lt;br&gt;</code></td>
-                <td>Line One<br>Line Two (after break)</td>
-            </tr>
-
-            <tr>
-                <td>Images</td>
-                <td><code>&lt;img src="..."&gt;</code></td>
-                <td><img src="https://4kwallpapers.com/images/walls/thumbs_2t/20312.jpg" alt="Small Placeholder"></td>
-            </tr>
-            
-        </tbody>
-    </table>
-
-</body>
-</html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -204,7 +105,11 @@ option[value="done"] {
     </select></div>
         <button id="add_btn">Add Task</button>
     </div>
+    <div style="display: flex; justify-content: space-evenly; height:200px; margin-top: 30px; background-color: #1dd1a1;">
+    <div class="not_started" style="flex: 1; border-right: 2px solid rgba(0, 0, 0, 0.1); text-align: center;">Not started</div>
+    <div class="in_progress" style="flex: 1; border-right: 2px solid rgba(0, 0, 0, 0.1); text-align: center;">In progress</div>
+    <div class="_done" style="flex: 1; text-align: center;">Done</div> </div>
     <script src="script.js">
     </script>
 </body>
-</html> -->
+</html> 
