Fix task statuses, enhance task UI, add new page
Rename task status values and classes (todo→not_started, doing→in_progress, done→_done) and remove the container background color. Fix JS bugs: query the select by .cool-select, read text input via .value, clear input after add, and route new tasks to the correct column. Enhance add_panel: build inline controls (edit button and status updater) and allow moving a task between columns. Add a new new.html portfolio/dashboard mockup. These changes clean up status handling, improve task item UI/interaction, and add a separate demo page.

--- a/12_PROJECT_task_bar/index.html
+++ b/12_PROJECT_task_bar/index.html
@@ -58,15 +58,15 @@ option {
   padding: 10px; 
 }
 
-option[value="todo"] {
+option[value="not_started"] {
   color: #ff6b6b; /* Soft Red */
 }
 
-option[value="doing"] {
+option[value="in_progress"] {
   color: #feca57; /* Soft Yellow */
 }
 
-option[value="done"] {
+option[value="_done"] {
   color: #1dd1a1; /* Soft Green */
 }
 
@@ -99,13 +99,13 @@ option[value="done"] {
         <div class="select-wrapper">
     <select class="cool-select">
         <option value="" disabled selected>Select Status</option>
-        <option value="todo">● Not Started</option>
-        <option value="doing">● In Progress</option>
-        <option value="done">● Done</option>
+        <option value="not_started">● Not Started</option>
+        <option value="in_progress">● In Progress</option>
+        <option value="_done">● Done</option>
     </select></div>
         <button id="add_btn">Add Task</button>
     </div>
-    <div style="display: flex; justify-content: space-evenly; height:200px; margin-top: 30px; background-color: #1dd1a1;">
+    <div style="display: flex; justify-content: space-evenly; height:200px; margin-top: 30px; ">
     <div class="not_started" style="flex: 1; border-right: 2px solid rgba(0, 0, 0, 0.1); text-align: center;">Not started</div>
     <div class="in_progress" style="flex: 1; border-right: 2px solid rgba(0, 0, 0, 0.1); text-align: center;">In progress</div>
     <div class="_done" style="flex: 1; text-align: center;">Done</div> </div>
