Add styles and delete/Edit UI to task manager
Update index.html title and link external stylesheet; add a new style.css with styles for task cards, text container, Edit button, status dropdown and Delete (trash) icon/button. Refactor script.js to assign a task-card class, improve markup structure (task-text-container, hidden edit input), add a Delete button with SVG and click handler to remove tasks, small formatting/semicolon fixes, and a placeholder comment for local storage. Overall this separates styling into CSS and introduces task deletion and cleaner card layout.

--- a/12_PROJECT_task_bar/index.html
+++ b/12_PROJECT_task_bar/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TASK-MANAGER</title>
+    <link rel="stylesheet" href="style.css">
     <style>
         h1{text-align: center; font-weight: 300;}
         #top{text-align: center;display: flex;justify-content: center; gap: 10px;
@@ -31,21 +32,16 @@
   color: #e0e0e0;
   border: 2px solid #333;
   border-radius: 8px;
-  
-  /* The "Cool" Glow Effect on Focus */
   outline: none;
   transition: all 0.3s ease;
-  
-  /* Custom Arrow (The trick!) */
 }
 
-/* Hover State */
 .cool-select:hover {
   border-color: #555;
   background-color: #252525;
 }
 
-/* Focus State - Neon Blue Glow */
+
 .cool-select:focus {
   border-color: #00d4ff;
   box-shadow: 0 0 10px rgba(0, 212, 255, 0.3);
