Add Local Storage demo; show date in task manager
Add a new Local Storage example (13_Local_Storage/Local_Storage.html + script.js) that lets you add/remove items and persists them in localStorage under the 'data' key. Update the task-manager UI and script: give the H1 a .tasks class and append today's date to the header, small JS cleanup around saving/loading tasks and ensuring loaded tasks set their dropdown value and are appended to the correct column. Also update .vscode/settings.json to include 'lastelement' in the workspace settings.

--- a/12_PROJECT_task_bar/index.html
+++ b/12_PROJECT_task_bar/index.html
@@ -88,7 +88,7 @@ option[value="_done"] {
     </style>
 </head>
 <body style="background-color: #212121; color: antiquewhite;">
-    <h1>TASK-MANAGER</h1>
+    <h1 class="tasks">TASK-MANAGER </h1>
 
     <div id="top">
         <input type="text" id="input-task" placeholder="add your task">
